# fastapi-template

./: .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.hatchet.yml  docker-compose.otel.yml  docker-compose.yml
.github/workflows/: docker_push.yml
api-shared/: pyproject.toml
api-shared/src/api_shared/: hatchet_client.py
api-shared/src/api_shared/core/: settings.py  telemetry.py
api-workers-general/: pyproject.toml
api-workers-ml/: pyproject.toml
app/api/: lifespan.py
app/api/tasks/: deps.py  general.py  ml.py
app/core/: hatchet.py
docs/: project_structure.md
